--- a/infrastructure/aws/codedeploy/appspec.yml
+++ b/infrastructure/aws/codedeploy/appspec.yml
@@ -2,12 +2,21 @@ language: node_js
 node_js:
   - "9.4.0"
 
+
+branches:
+  only:
+    - Lab-6
+   
+
+
 script:
+  - pwd
   - npm install
   - npm test
   - cd ..
   - ls -lrt
   - zip -r csye6225-spring2018.zip csye6225-spring2018
+  - pwd
   - ls -lrt
 
 cache:
@@ -18,4 +27,8 @@ notifications:
   email:
     on_success: always
     on_failure: always
+
+
+
+
 
