--- a/infrastructure/aws/codedeploy/appspec.yml
+++ b/infrastructure/aws/codedeploy/appspec.yml
@@ -15,7 +15,7 @@ script:
   - npm test
   - cd ..
   - ls -lrt
-  - zip -r csye6225-spring2018.zip csye6225-spring2018 >/dev/null
+  - zip -r csye6225-spring2018.zip csye6225-spring2018 >/dev/null 2>&1
   - pwd
   - ls -lrt
 
