--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,18 @@ language: node_js
 node_js:
   - "9.4.0"
 
+branches:
+  only:
+    - Lab-6
+   
 script:
+  - pwd
   - npm install
   - npm test
   - cd ..
   - ls -lrt
-  - zip -r csye6225-spring2018.zip csye6225-spring2018
+  - zip -r csye6225-spring2018.zip csye6225-spring2018 >/dev/null 2>&1
+  - pwd
   - ls -lrt
 
 cache:
