--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,22 @@ script:
   - pwd
   - ls -lrt
 
+after_success:
+  - pwd
+  - ls -ltr
+  - mkdir codedeploy
+  - zip -r csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip csye6225-spring2018 infrastructure/aws/codedeploy/appspec.yml
+  - ls -al
+  - mv csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip codedeploy/
+  - ls -al
+  - pwd
+  - cd codedeploy
+  - ls -al
+  - pwd
+  - cd ..
+  - pwd
+  - ls -al
+  
 cache:
   directories:
     -node_modules
