--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ after_success:
   - pwd
   - ls -ltr
   - mkdir codedeploy
-  - zip -r csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip csye6225-spring2018 infrastructure/aws/codedeploy/appspec.yml
+  - zip -r csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip csye6225-spring2018 infrastructure/aws/codedeploy/appspec.yml >/dev/null 2>&1
   - ls -al
   - mv csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip codedeploy/
   - ls -al
@@ -31,7 +31,7 @@ after_success:
   - cd ..
   - pwd
   - ls -al
-  
+
 cache:
   directories:
     -node_modules
