--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,54 @@ language: node_js
 node_js:
   - "9.4.0"
 
+
 script:
+  - pwd
   - npm install
   - npm test
   - cd ..
   - ls -lrt
-  - zip -r csye6225-spring2018.zip csye6225-spring2018
+  - zip -r csye6225-spring2018.zip csye6225-spring2018 >/dev/null 2>&1
   - ls -lrt
+
+after_success:
+  - pwd
+  - ls -ltr
+  - mkdir codedeploy
+  - zip -r csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip csye6225-spring2018 infrastructure/aws/codedeploy/appspec.yml >/dev/null 2>&1
+  - ls -al
+  - mv csye6225-spring2018-$TRAVIS_JOB_NUMBER.zip codedeploy/
+  - ls -al
+  - pwd
+  - cd codedeploy
+  - ls -al
+  - pwd
+  - cd ..
+  - pwd
+  - ls -al
+
+deploy:
+  - provider: s3
+    local_dir: codedeploy
+    bucket: $s3_bucket
+    region: us-east-1
+    skip_cleanup: true
+    access_key_id: $access_key_id
+    secret_access_key: $secret_access_key
+    on:
+      branch: Assignment-6
+
+  - provider: codedeploy
+    access_key_id: $access_key_id
+    bucket: $s3_bucket
+    key: csye6225-web-app-$TRAVIS_JOB_NUMBER.zip
+    bundle_type: zip
+    application: $application
+    deployment_group: $deployment_group
+    region: us-east-1
+    secret_access_key: $secret_access_key
+    wait-until-deployed: true
+
 
 cache:
   directories:
@@ -18,4 +59,3 @@ notifications:
   email:
     on_success: always
     on_failure: always
-
