--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -1,5 +1,5 @@
 {
-"Description" : "Creation of Stack for Assignment 5",
+"Description" : "Creation of Stack for Assignment 6",
 "AWSTemplateFormatVersion" : "2010-09-09",
 
 "Parameters" : {
@@ -27,6 +27,10 @@
   "dbSecurityGroupId" : {
     "Description" : "Resource ID for DB Security Group",
     "Type" : "String"
+  },
+  "iaminstance" : {
+    "Description" : "Instance Profile Name for CodeDeploy to S3",
+    "Type" : "String"
   }
 },
 "Resources": {
@@ -40,6 +44,7 @@
         "KeyName": "csye6225",
         "SubnetId": {"Ref": "ec2Subnet"},
         "Tenancy": "default",
+        "IamInstanceProfile": {"Ref":"iaminstance"},
         "BlockDeviceMappings" : [
         {
           "DeviceName" : "/dev/sda1",
@@ -59,6 +64,8 @@
                         "sudo apt-get install wget -y \n",
                         "sudo apt-get install python -y \n",
 
+                        "exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1 \n",
+                        "curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash - \n",
                         "sudo apt-get install -y nodejs \n",
                         "sudo apt-get install -y build-essential \n",
 
@@ -127,6 +134,5 @@
             ]
         }
     }
-
   }
 }
