--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -62,6 +62,8 @@
                     [
                         "#!/bin/bash -xe \n",
                         "sudo apt-get update \n",
+                        "sudo apt-get install openjdk-8-jdk -y\n",
+                        "sudo apt-get install ruby -y \n",
                         "sudo apt-get install wget -y \n",
                         "sudo apt-get install python -y \n",
 
