--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ deploy:
     region: us-east-1
     secret_access_key: $secret_access_key
     wait-until-deployed: true
+    on:
+      branch: Assignment-6
 
 
 cache:
