--- a/infrastructure/aws/codedeploy/appspec.yml
+++ b/infrastructure/aws/codedeploy/appspec.yml
@@ -2,13 +2,10 @@ version: 0.0
 os: linux
 
 files:
-  - source: csye6225-spring2018.zip
-    destination: /var/webapp/csye6225-spring2018
+  - source: ./csye6225-spring2018
+    destination: /var/webapp
+
 hooks:
-  BeforeInstall:
-   - location: ./beforeInstall.sh
-     timeout: 180
-     runas: ubuntu
   AfterInstall:
    - location: ./afterInstall.sh
      timeout: 180
