--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -71,7 +71,7 @@
                         "curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash - \n",
                         "sudo apt-get install -y nodejs \n",
                         "sudo apt-get install -y build-essential \n",
-                        "sudo npm install pm2 -g",
+                        "sudo npm install pm2 -g \n",
 
                         "sudo apt-get update \n",
                         "sudo wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install \n",
