--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -126,11 +126,17 @@
   "DynamoDBTable": {
   "Type" : "AWS::DynamoDB::Table",
   "Properties" : {
-    "AttributeDefinitions" : [ {"AttributeName" : "id", "AttributeType" : "S"}],
-    "KeySchema" : [ {"AttributeName" : "id", "KeyType" : "HASH"} ],
+    "AttributeDefinitions" : [
+      {"AttributeName" : "tkn", "AttributeType" : "S"}
+    ],
+    "KeySchema" : [
+      {"AttributeName" : "tkn", "KeyType" : "HASH"}
+    ],
     "ProvisionedThroughput" : {
-      "ReadCapacityUnits" : 5,
-      "WriteCapacityUnits" : 5
+      "ReadCapacityUnits" : 2,
+      "WriteCapacityUnits" : 2
+    },
+
     },
     "TableName": {"Fn::Join" : ["",[{"Ref" : "stackname"},"-csye6225-dynamodb-table"]] }
   }
