--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -109,7 +109,24 @@
                                     " >> /var/.env \n"
                                 ]
                             ]
-                        }
+                        },
+                        "sudo echo [Unit] > /var/awslogs.service \n",
+                        "sudo echo Description=The CloudWatch Logs agent >> /var/awslogs.service \n",
+                        "sudo echo After=rc-local.service >> /var/awslogs.service \n",
+                        "sudo echo [Service] >> /var/awslogs.service \n",
+                        "sudo echo Type=simple >> /var/awslogs.service \n",
+                        "sudo echo Restart=always >> /var/awslogs.service \n",
+                        "sudo echo KillMode=process >> /var/awslogs.service \n",
+                        "sudo echo TimeoutSec=infinity >> /var/awslogs.service \n",
+                        "sudo echo PIDFile=/var/awslogs/state/awslogs.pid >> /var/awslogs.service \n",
+                        "sudo echo ExecStart=/var/awslogs/bin/awslogs-agent-launcher.sh --start --background --pidfile $PIDFILE --user awslogs --chuid awslogs & >> /var/awslogs.service \n",
+                        "sudo echo [Install] >> /var/awslogs.service \n",
+                        "sudo echo WantedBy=multi-user.target >> /var/awslogs.service \n",
+                        "sudo mv awslogs.service /etc/systemd/system \n",
+                        "sudo wget https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py \n",
+                        "sudo python awslogs-agent-setup.py -n -r us-east-1 \n",
+                        "sudo systemctl enable awslogs.service \n",
+                        "sudo systemctl start awslogs.service \n"
                     ]
                 ]
             }
