--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -31,10 +31,6 @@
   "iaminstance" : {
     "Description" : "Instance Profile Name for CodeDeploy to S3",
     "Type" : "String"
-  },
-  "lambdaArn" : {
-    "Description" : "Lambda function Arn",
-    "Type" : "String"
   }
 },
 "Resources": {
@@ -113,24 +109,7 @@
                                     " >> /var/.env \n"
                                 ]
                             ]
-                        },
-                        "sudo echo [Unit] > /var/awslogs.service \n",
-                        "sudo echo Description=The CloudWatch Logs agent >> /var/awslogs.service \n",
-                        "sudo echo After=rc-local.service >> /var/awslogs.service \n",
-                        "sudo echo [Service] >> /var/awslogs.service \n",
-                        "sudo echo Type=simple >> /var/awslogs.service \n",
-                        "sudo echo Restart=always >> /var/awslogs.service \n",
-                        "sudo echo KillMode=process >> /var/awslogs.service \n",
-                        "sudo echo TimeoutSec=infinity >> /var/awslogs.service \n",
-                        "sudo echo PIDFile=/var/awslogs/state/awslogs.pid >> /var/awslogs.service \n",
-                        "sudo echo ExecStart=/var/awslogs/bin/awslogs-agent-launcher.sh --start --background --pidfile $PIDFILE --user awslogs --chuid awslogs & >> /var/awslogs.service \n",
-                        "sudo echo [Install] >> /var/awslogs.service \n",
-                        "sudo echo WantedBy=multi-user.target >> /var/awslogs.service \n",
-                        "sudo mv awslogs.service /etc/systemd/system \n",
-                        "sudo wget https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py \n",
-                        "sudo python awslogs-agent-setup.py -n -r us-east-1 \n",
-                        "sudo systemctl enable awslogs.service \n",
-                        "sudo systemctl start awslogs.service \n"
+                        }
                     ]
                 ]
             }
@@ -147,19 +126,11 @@
   "DynamoDBTable": {
   "Type" : "AWS::DynamoDB::Table",
   "Properties" : {
-    "AttributeDefinitions" : [
-      {"AttributeName" : "tkn", "AttributeType" : "S"}
-    ],
-    "KeySchema" : [
-      {"AttributeName" : "tkn", "KeyType" : "HASH"}
-    ],
+    "AttributeDefinitions" : [ {"AttributeName" : "id", "AttributeType" : "S"}],
+    "KeySchema" : [ {"AttributeName" : "id", "KeyType" : "HASH"} ],
     "ProvisionedThroughput" : {
       "ReadCapacityUnits" : 5,
       "WriteCapacityUnits" : 5
-    },
-    "TimeToLiveSpecification":{
-    "AttributeName" : "ttl",
-    "Enabled" : true
     },
     "TableName": {"Fn::Join" : ["",[{"Ref" : "stackname"},"-csye6225-dynamodb-table"]] }
   }
@@ -183,16 +154,6 @@
       }
   }
 },
-"MySNSTopic":{
-    "Type":"AWS::SNS::Topic",
-    "Properties":{
-      "Subscription":[
-        {
-          "Endpoint":[{"Ref": "lambdaArn"}],
-        },
-      ]
-    }
-  },
 "Outputs": {
     "InstanceId": {
         "Description": "InstanceId of the newly created EC2 instance",
